--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -21,6 +21,7 @@
     "pm2": "^5.3.0",
     "pug": "2.0.0-beta11",
     "sanitize-html": "^2.11.0",
+    "socket.io": "^3.1.2",
     "winston": "^3.11.0"
   }
 }
