--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "production": "pm2 start ecosystem.config.js"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "axios": "^1.6.2",
+    "better-queue": "^3.8.12",
     "cookie-parser": "~1.4.4",
     "cross-env": "^7.0.3",
     "csurf": "^1.11.0",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "helmet": "^7.1.0",
