--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "axios": "^1.6.2",
     "better-queue": "^3.8.12",
+    "claude-ai": "^1.2.2",
     "cookie-parser": "~1.4.4",
     "cross-env": "^7.0.3",
     "csurf": "^1.11.0",
@@ -26,6 +27,7 @@
     "morgan": "~1.9.1",
     "nodemon": "^3.0.2",
     "nunjucks": "^3.2.4",
+    "openai": "^4.26.0",
     "pm2": "^5.3.0",
     "pug": "2.0.0-beta11",
     "sanitize-html": "^2.11.0",
