--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "better-queue": "^3.8.12",
     "claude-ai": "^1.2.2",
     "cookie-parser": "~1.4.4",
@@ -17,6 +18,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
+    "express-session": "^1.18.0",
     "ffmpeg": "^0.0.4",
     "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
@@ -24,6 +26,8 @@
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "http-errors": "~1.6.3",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.3",
     "morgan": "~1.9.1",
     "nodemon": "^3.0.2",
     "nunjucks": "^3.2.4",
