--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
     "morgan": "~1.9.1",
