--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "pug": "2.0.0-beta11",
     "sanitize-html": "^2.11.0",
     "socket.io": "^3.1.2",
+    "socket.io-client": "^4.7.4",
     "uuid": "^9.0.1",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "ws": "^8.16.0"
   }
 }
